2013-07-02  Daiki Ueno  <ueno@gnu.org>

	* mml2015.el (mml2015-epg-key-image): Use 'gnus-create-image' instead
	of 'create-image' for XEmacs compatibility; check errors when decoding
	image.  Reported by Uwe Brauer.

2013-06-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-extend-url-button): Make it work again with
	gnus-button-push revised at 2011-01-19.

2013-06-23  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* eww.el, shr.el, shr-color.el: Removed from the Gnus repository.  They
	now live in the lisp/net Emacs 24 repository.

2013-06-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* eww.el (eww-update-header-line-format): Quote % characters.

2013-06-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* eww.el (eww-process-text-input): Display passwords as asterisks.

	* shr.el (shr-make-table-1): Protect against invalid column-spans.

2013-06-19  Tom Tromey  <tromey@redhat.com>

	* eww.el (eww-top-url): Remove.
	(eww-home-url, eww-start-url, eww-contents-url): New defvars.
	(eww-render): Set new variables.  Don't set eww-top-url.
	(eww-handle-link): Handle "prev", "home", and "contents".
	Downcase the rel text.
	(eww-top-url): Choose best top URL.

2013-06-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* eww.el: Rewrite to implement form elements "by hand" instead of
	relying in widget.el.  Using widget.el leads to too many
	user interface inconsistencies.
	(eww-self-insert): Implement entering commands in text fields.
	(eww-process-text-input): New function to make text input field editing
	work.
	(eww-submit): Rewrite to use the new-style form methods.
	(eww-select-display): Display the correct selected item.
	(eww-change-select): Implement changing the select value.
	(eww-toggle-checkbox): Implement radio/checkboxes.
	(eww-update-field): Fix compilation error.
	(eww-tag-textarea): Implement <textarea>.

	* shr.el (shr-urlify): Use `keymap' instead of `local-map' so that we
	don't shadow mode-specific bindings.
